@@ -1,3 +1,10 @@
+Mon, 07 Apr 2008 11:24:54 +0200 <thp@perli.net>
+Fix problems with the tray icon emblems
+
+	* src/gpodder/trayicon.py: Fix emblem drawing code for non-square
+	icons; use the "refresh" icon for feed updates and "multimedia-player"
+	icon for the iPod/MP3 player sync status emblem
+
 Sun, 06 Apr 2008 17:22:11 +0200 <thp@perli.net>
 Fix install Makefile bug; add donator; fix treeview header height
 
